force-app/main/default/objects/BAMApplicationRole__c/BAMApplicationRole__c.object-meta.xml
<CustomObject>
    <description>Configuration for all the roles that are connected to a Application exposed in Merchant Portal</description>
    <label>Merchant Portal Application Role</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Role Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Portal Application Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>