force-app/main/default/objects/BAMApplicationRole__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The Parent application that this role belongs to</description>
    <inlineHelpText>The Parent application that this role belongs to</inlineHelpText>
    <label>Application</label>
    <referenceTo>BAMApplication__c</referenceTo>
    <relationshipName>ApplicationRoles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>