force-app/main/default/objects/BAMApplicationRole__c/fields/ShowBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>ShowBillingAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this Role should expose a billing accounts selector when it&apos;s selected</description>
    <inlineHelpText>Determines whether this Role should expose a billing accounts selector when it&apos;s selected</inlineHelpText>
    <label>Show Billing Account</label>
    <type>Checkbox</type>
</CustomField>