force-app/main/default/objects/BAMApplicationRole__c/fields/ShowGroup__c.field-meta.xml
<CustomField>
    <fullName>ShowGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this Role should expose a Group selector when it&apos;s selected</description>
    <inlineHelpText>Determines whether this Role should expose a Group selector when it&apos;s selected</inlineHelpText>
    <label>Show Groups</label>
    <type>Checkbox</type>
</CustomField>