force-app/main/default/objects/BAMApplicationRole__c/fields/ShowOrganisation__c.field-meta.xml
<CustomField>
    <fullName>ShowOrganisation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether to show Organisation selector when Role is selected. Since BAM is always in the context of a single Org, this won&apos;t render an actual field, but it&apos;s an indicator to let BAM know to store the Organisation record on the Auth Rule record.</description>
    <inlineHelpText>Determines whether to show Organisation selector when Role is selected. Since BAM is always in the context of a single Org, this won&apos;t render an actual field, but it&apos;s an indicator to let BAM know to store the Organisation record on the Auth Rule record.</inlineHelpText>
    <label>Show Organisation</label>
    <type>Checkbox</type>
</CustomField>