force-app/main/default/objects/BAMApplicationRole__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Role__c</columns>
    <columns>RoleDescription__c</columns>
    <columns>Status__c</columns>
    <columns>ShowBillingAccount__c</columns>
    <columns>ShowGroup__c</columns>
    <columns>ShowOrganisation__c</columns>
    <columns>OrderPriority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>